--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "debug-sandbox",
   "type": "module",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Spawns a Node.js sandbox process with an attached debugger to inspect via Chromium.",
   "main": "index.js",
   "bin": {
@@ -25,5 +25,12 @@
     "open-node-frontend"
   ],
   "author": "ThaUnknown",
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/ThaUnknown/debug-sandbox/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/ThaUnknown/debug-sandbox.git"
+  }
 }
