--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "debug-sandbox",
   "type": "module",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Spawns a Node.js sandbox process with an attached debugger to inspect via Chromium.",
   "main": "index.js",
   "bin": {
-    "sbx": "--inspect ./index.js"
+    "sbx": "./bin/bin.js"
   },
   "keywords": [
     "inspect",
